# automata-mk2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/automata/: __main__.py
src/automata/services/: agenda.py  automod.py  exec_docs.py  faq.py  moderation.py  mun_identity.py  starboard.py
